[tool.poetry]
name = "langcorn"
version = "0.0.11"
description = "A Python package creating rest api interface for LangChain"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = [
    "Alexander Miasoiedov <msoedov@gmail.com>",
]
repository = "https://github.com/msoedov/langcorn"
license = "MIT"
readme = "Readme.md"
keywords = ["nlp", "langchain", "openai", "gpt", "fastapi", "llm"]
packages = [{ include = "langcorn", from = "." }]


[tool.poetry.scripts]
langcorn = "langcorn.__main__:entrypoint"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
langchain = "^0.0.230"
openai = "^0.27.8"
fire = "^0.5.0"
loguru = "^0.7.0"
bs4 = "0.0.1"  # required for ex4.py

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
httpx = "^0.24.1"
pytest = "^7.4.0"
types-requests = "^2.31.0.1"
pre-commit = "^3.3.3"
chromadb = "^0.3.2.6" # required for ex8.py

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
