[tool.poetry]
name = "langcorn"
version = "0.0.22"
description = "A Python package creating rest api interface for LangChain"
authors = ["Alexander Miasoiedov <msoedov@gmail.com>"]
maintainers = ["Alexander Miasoiedov <msoedov@gmail.com>"]
repository = "https://github.com/msoedov/langcorn"
license = "MIT"
readme = "Readme.md"
keywords = ["nlp", "langchain", "openai", "gpt", "fastapi", "llm", "llmops"]
packages = [{ include = "langcorn", from = "." }]


[tool.poetry.scripts]
langcorn = "langcorn.__main__:entrypoint"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.104.1,<0.110.0"
uvicorn = "^0.23.2"
langchain = "^0.0.331"
openai = "^0.28.1"
fire = "^0.5.0"
loguru = "^0.7.2"
bs4 = "0.0.1"                      # required for ex4.py
langchain-experimental = "^0.0.37"
certifi = "^2023.7.22"
numexpr = "^2.8.7"
pydantic = "^1.10.13"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
httpx = "^0.25.1"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
chromadb = "^0.3.2.6" # required for ex8.py

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
